se cambian y agregan nuevas imagenes

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/Prod-musical.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Producción, Mezcla y Master</h5>
                         <p class="card-text">
@@ -135,7 +135,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/Videoclip.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Videoclip</h5>
                         <p class="card-text">
@@ -152,7 +152,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/Marketing-musical.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Marketing Musical</h5>
                         <p class="card-text">
